# e2e-recsys

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  vocab.json
configs/: baseline_model.json
core/data_generation/: file_converter.py
e2e_recsys/data_generation/: disk_dataset.py  file_converter.py
e2e_recsys/etl/: data_split.py  etl.py  etl_pipeline.py  gen_negatives.py  preprocess.py
e2e_recsys/features/: csv_vocab_builder.py
e2e_recsys/modelling/layers/: feature_imputer.py
e2e_recsys/modelling/models/: MultiLayerPerceptron.py  abstract_torch_model.py  multi_layer_perceptron.py
e2e_recsys/modelling/trainers/: base_trainer.py  trainer.py
e2e_recsys/modelling/utils/: metric_store.py
e2e_recsys/tests/: conftest.py
e2e_recsys/tests/configs/: test_model.json
e2e_recsys/tests/data_generation/: test_disk_dataset.py  test_file_converter.py
e2e_recsys/tests/features/: test_csv_vocab_builder.py
e2e_recsys/tests/modelling/models/: test_multi_layer_perceptron.py
e2e_recsys/tests/utils/: test_io.py
